# writing_LMS

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  index.html  main.py  pyproject.toml
.claude/skills/design/: SKILL.md
.claude/skills/prd/: SKILL.md
agents/writing/: pyproject.toml
agents/writing/src/: prompt.py
alembic/: env.py
alembic/versions/: 0001_init.py  0002_user_is_admin.py  0003_user_role.py
data/: dictionary.py
frontend/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: auth.ts  hooks.ts  mock.ts
frontend/src/components/: OnlineUsersButton.tsx  OnlineUsersModal.tsx  ui.tsx
frontend/src/components/dashboard/: Calendar.tsx  NoticeCard.tsx  ProgressCard.tsx  ScheduleList.tsx  WelcomeCard.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/pages/: Assignments.tsx  Attendance.tsx  Classes.tsx  Communication.tsx  Dashboard.tsx  Grades.tsx  Login.tsx
frontend/src/store/: authStore.ts  uiStore.ts
scripts/: hash_password.py  seed_admin.py  setup_checkpointer.py
src/app/: models.py
src/app/auth/: dependencies.py  router.py  schema.py  security.py  service.py
src/app/core/langgraph/: langgraph_app.py
src/app/doc/: api.py  forms.py  model.py  pipeline_service.py  schema.py  service.py
src/app/llm/: factory.py  ollama.py  router.py
src/app/ocr/: base.py  factory.py  schema.py  stub.py
src/app/shared/: __init__.py  config.py  context.py  database.py  exceptions.py  init.py  logging.py  middleware.py
src/app/user/: model.py  schema.py
src/app/writing/: agent.py  analyze.py  domain.py  domain_prompts.py  pdf.py  prompt.py  router.py  schema.py  service.py
tests/: conftest.py  test_agent_stream.py  test_auth_deps.py  test_config.py  test_health.py  test_security.py  test_writing_router.py
